2016-05-18  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.ld.in: Tweak thread size.
	* src/main.c (main): Use chopstx_setpriority.
	* src/usb-icc.c (ccid_init): Use new eventflag API.

	* regnual/regnual.c (nvic_enable_intr): New.
	(main): Call nvic_enable_intr.

	* chopstx: Update.

2016-05-16  Niibe Yutaka  <gniibe@fsij.org>

	* regnual/regnual.c (usb_cb_rx_ready, usb_cb_tx_done)
	(usb_cb_device_reset): Follow the change of USB API.

	* chopstx: Update.
	* src/sys.c: Update from Chopstx.

2016-05-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/neug.c (rng): Call chopstx_claim_irq before adc_start.
	Remove call of chopstx_release_irq.

2016-05-12  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update.
	* src/sys.c: Update from Chopstx.
	* src/usb_lld.h: Likewise.
	* src/usb_stm32f103.c: Likewise.

	* src/usb_ctrl.c (usb_intr): Follow the change of USB API.
	(usb_cb_rx_ready, usb_cb_tx_done): Likewise.

	* src/adc.h: Remove unused declarations.

2016-03-08  Niibe Yutaka  <gniibe@fsij.org>

	* tool/gnuk_token.py (gnuk_token.__init__, regnual.__init__):
	Don't call setConfiguration method.

	* src/usb_lld.h (usb_cb_ctrl_write_finish): Change the API of
	callback, which possibly needs INDEX, VALUE, and LEN parameters.
	(usb_lld_set_data_to_recv): Fix the type of P.
	(USB_DEVICE_DESCRIPTOR_TYPE, USB_CONFIGURATION_DESCRIPTOR_TYPE)
	(USB_STRING_DESCRIPTOR_TYPE, USB_INTERFACE_DESCRIPTOR_TYPE)
	(USB_ENDPOINT_DESCRIPTOR_TYPE): Remove, as we have the enumeration
	values for same things.

	* src/usb_stm32f103.c (handle_in0): Follow the change.
	* src/usb_ctrl.c (usb_cb_ctrl_write_finish): Likewise.

	* src/usb_desc.c (usb_cb_get_descriptor): Use HID_INTERFACE.
	(device_desc, config_desc, string_descriptors)
	(usb_cb_get_descriptor): Use the enumeration types.
	* src/configure: Use the enumeration types.

	* regnual/regnual.c: Follow the change of usb_lld.h.

2016-02-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_verify): Support VERIFY reset, which is